# trapi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: import_keep.py
src/trello_cli/: __init__.py  api.py  config.py  main.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_match_ref.py
