[project]
name = "trapi-cli"
version = "0.1.0"
description = "A gh-style command line interface for Trello"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dan Bolser", email = "dan.bolser@outsee.co.uk" }]
keywords = ["trello", "cli", "kanban", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/dbolser/trapi"
Repository = "https://github.com/dbolser/trapi"
Issues = "https://github.com/dbolser/trapi/issues"

[project.scripts]
trello = "trello_cli.main:app"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trello_cli"]
